fix: align avatar with hr #31

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -394,7 +394,7 @@ body {
 }
 
 .about__person__photo {
-  max-width: 200px;
+  max-width: 180px;
   margin-top: -2rem;
 }
 
